# fundex

./: .gitignore  .vercelignore  Anchor.toml  README.ko.md  README.md  package.json
app/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
data/funding/: BTC-PERP.csv  SOL-PERP.csv  summary.json  swap-backtest.json
docs/: SECURITY.md  TESTING.md  WHITEPAPER.md
docs/benchmarks/: cu-table.md  rate-model-analysis-v3.md  rate-model-analysis.md
programs/fundex/: Cargo.toml
programs/fundex/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/fundex/src/instructions/: admin_reset_oracle.rs  close_market.rs  close_pool.rs  close_position.rs  deposit_lp.rs  initialize_market.rs  initialize_pool.rs  initialize_rate_oracle.rs  liquidate_position.rs  mod.rs  open_position.rs  settle_funding.rs  sync_pool_pnl.rs  withdraw_lp.rs
scripts/: analyze-rate-model-v3.py  analyze-rate-model.py  backtest-funding.ts  backtest-swaps.ts  bench-cu.ts  check-market-mints.ts  check-oracles.ts  check-pools.ts  check-state.ts  check-vault-mint.ts  close-pools.ts  crank-devnet.ts  crank.ts  debug-drift-rate.ts  fix-7d-markets.ts  init-missing-pools.ts  init-pools.ts  liquidator.ts  reset-oracle.ts  reset-oracles.ts  seed-pools.ts  setup-devnet.ts  test-e2e.ts  train-rate-model-v2.py  train-rate-model-v3.py  train-rate-model.py  validate-rate-model.py  verify-drift-indices.ts
scripts/charts/: make-amm-fee-curve.py  make-funding-history.py  make-ml-dir-acc.py
sdk/: tsconfig.json
sdk/src/: client.ts  constants.ts  index.ts  pda.ts
tests/: fundex.ts
(+56 files in other folders)
